--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./
       dockerfile: environment/dockerfiles/app.dockerfile
       args:
-        xdebug: 'true'
+        xdebug: 'false'
         tinker: 'true'
     user: '1000:1000'
     volumes:
