[#RB74U5] Create User and Game
Add create game endpoint
Remove sensitive data from user model
Add junction tables for users and expansions to relate to a game
Remove Example Test
Feedback
Needed to add slash for database volume to quite down docker.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
   database:
     image: 'postgres:latest'
     volumes:
-      - 'dbdata:/var/lib/postgresql/data'
+      - '/dbData:/var/lib/postgresql/data'
     ports:
       - '3307:5432'
     environment:
