--- a/environment/.docker.env.example
+++ b/environment/.docker.env.example
@@ -1,10 +1,11 @@
-PHP_XDEBUG_REMOTE_HOST=192.168.145.88
-PHP_XDEBUG_REMOTE_PORT=9001
-PHP_XDEBUG_DEFAULT_ENABLE=1
-PHP_XDEBUG_REMOTE_AUTOSTART=1
-PHP_XDEBUG_REMOTE_ENABLE=1
+PHP_XDEBUG_CLIENT_HOST=192.168.145.88
+PHP_XDEBUG_CLIENT_PORT=9001
+
+PHP_XDEBUG_MODE=profile
+
+PHP_XDEBUG_START_WITH_REQUEST=yes
+
 PHP_XDEBUG_IDEKEY=DOCKER_XDEBUG
-PHP_XDEBUG_PROFILER_ENABLE=0
 
 # OpCache Configuration
 PHP_OPCACHE_VALIDATE_TIMESTAMPS=1
