--- a/environment/config/php/conf.d/xdebug.ini
+++ b/environment/config/php/conf.d/xdebug.ini
@@ -1,10 +1,12 @@
 [xdebug]
-xdebug.default_enable = ${PHP_XDEBUG_DEFAULT_ENABLE}
-xdebug.remote_autostart = ${PHP_XDEBUG_REMOTE_AUTOSTART}
-xdebug.remote_connect_back = 0
-xdebug.remote_host = ${PHP_XDEBUG_REMOTE_HOST}
-xdebug.remote_port = ${PHP_XDEBUG_REMOTE_PORT}
-xdebug.remote_enable = ${PHP_XDEBUG_REMOTE_ENABLE}
+xdebug.mode = ${PHP_XDEBUG_MODE}
+xdebug.start_with_request = ${PHP_XDEBUG_START_WITH_REQUEST}
+
+xdebug.discover_client_host = 0
+
+xdebug.client_host = ${PHP_XDEBUG_CLIENT_HOST}
+
+xdebug.client_port = ${PHP_XDEBUG_CLIENT_PORT}
+
 xdebug.idekey = ${PHP_XDEBUG_IDEKEY}
 
-xdebug.profiler_enable = ${PHP_XDEBUG_PROFILER_ENABLE}
