--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DB_DATABASE=kards-against-humanity
 DB_USERNAME=root
 DB_PASSWORD=secret
 
-BROADCAST_DRIVER=redis
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
