--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,7 @@ jobs:
       - name: Generate Application Key
         run: docker-compose exec -T app php artisan key:generate
       - name: Run migrations
-        run: docker-compose exec -T app php artisan migrate:fresh --force
-      - name: Run Seeders
-        run: docker-compose exec -T app php artisan db:seed --force
+        run: docker-compose exec -T app php artisan migrate:fresh --env=testing --force
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         run: docker-compose exec -T app vendor/bin/phpunit
       - name: Spin down container
