Format pest tests for; - Creating a game - Drawing white cards - Getting expansions - Getting a game state - Joining a Game - Kicking a player
Co-authored-by: anacarol040 <anacarol040@gmail.com>
Co-authored-by: Milo <m.zapolski@vehikl.com>
Co-authored-by: Joel <joel.repta@gmail.com>
Co-authored-by: Ryan <rienmack@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1.2'
+          php-version: '8.2.7'
       - name: Copy .env.example to .env
         run: cp .env.example .env
       - name: Copy .docker.env.example to .docker.env
@@ -36,7 +36,7 @@ jobs:
       - name: Run migrations
         run: docker-compose exec -T app php artisan migrate:fresh --env=testing --force
       - name: Execute tests (Unit and Feature tests) via PHPUnit
-        run: docker-compose exec -T app vendor/bin/phpunit
+        run: docker-compose exec -T app vendor/bin/pest
       - name: Spin down container
         if: always()
         run: docker-compose down -v
