--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,14 @@
         "pusher/pusher-php-server": "^7.0.2"
     },
     "require-dev": {
+        "defstudio/pest-plugin-laravel-expectations": "^2.1",
         "fakerphp/faker": "^1.19.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.5.0",
         "nunomaduro/collision": "^7.0",
         "pestphp/pest": "^2.9",
         "pestphp/pest-plugin-drift": "^2.0",
+        "pestphp/pest-plugin-laravel": "^2.1",
         "phpunit/phpunit": "^10.0",
         "spatie/laravel-ignition": "^2.0"
     },
