--- a/composer.json
+++ b/composer.json
@@ -5,25 +5,28 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.1.2",
-        "fideloper/proxy": "^4.4.1",
-        "fruitcake/laravel-cors": "^2.0.5",
+        "php": "^8.2.7",
         "guzzlehttp/guzzle": "^7.4.1",
-        "laravel/framework": "^8.82",
-        "laravel/sanctum": "^2.14",
-        "laravel/telescope": "^4.9",
+        "doctrine/dbal": "^3.0",
+        "laravel/framework": "^10.16",
+        "laravel/sanctum": "^3.2",
+        "laravel/telescope": "^4.15.2",
         "laravel/tinker": "^2.7",
         "nubs/random-name-generator": "^2.2",
         "predis/predis": "^1.1.10",
         "pusher/pusher-php-server": "^7.0.2"
     },
     "require-dev": {
-        "facade/ignition": "^2.17",
+        "defstudio/pest-plugin-laravel-expectations": "^2.1",
         "fakerphp/faker": "^1.19.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.5.0",
-        "nunomaduro/collision": "^5.11",
-        "phpunit/phpunit": "^9.5.13"
+        "nunomaduro/collision": "^7.0",
+        "pestphp/pest": "^2.9",
+        "pestphp/pest-plugin-drift": "^2.0",
+        "pestphp/pest-plugin-laravel": "^2.1",
+        "phpunit/phpunit": "^10.0",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -57,8 +60,11 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
